Fade-in and fade-out background for menu

--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
             <a href="index.html" class="header-logo">
                 <img src="./assets/images/logo.svg" alt="easybank logo">
             </a>
-            
-            <a href="/" class="hide-for-dektop">
-                <img src="./assets/images/icon-hamburger.svg" alt="">
-            </a>
 
             <div class="header__links hide-for-mobile hide-for-tablet">
                 <a href="#">Home</a>
@@ -29,8 +25,17 @@
                 <a href="#">Careers</a>
             </div>
 
+            
+            <div href="/" class="hide-for-dektop header__menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
             <button type="button" class="header-button hide-for-mobile hide-for-tablet">Register Invite</button>
         </nav>
+
+        <div class="overlay"></div>
     </header>
     <script src="app.js"></script>
 </body>
