--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <img src="./assets/images/logo.svg" alt="easybank logo">
             </a>
 
-            <div class="header__links hide-for-mobile hide-for-tablet">
-                <a href="#">Home</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
-                <a href="">Blog</a>
-                <a href="#">Careers</a>
+            <div class="header__links  hide-for-tablet has-fade">
+                <a href="#" class="menu-link">Home</a>
+                <a href="" class="menu-link">About</a>
+                <a href="" class="menu-link">Contact</a>
+                <a href="" class="menu-link">Blog</a>
+                <a href="#" class="menu-link">Careers</a>
             </div>
 
             
@@ -35,7 +35,7 @@
             <button type="button" class="header-button hide-for-mobile hide-for-tablet">Register Invite</button>
         </nav>
 
-        <div class="overlay"></div>
+        <div class="overlay has-fade"></div>
     </header>
     <script src="app.js"></script>
 </body>
