--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./Sccs/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
     <header class="header">
         <nav class="header-nav">
             <a href="index.html" class="header-logo">
@@ -32,11 +32,23 @@
                 <span></span>
             </div>
 
-            <button type="button" class="header-button hide-for-mobile hide-for-tablet">Register Invite</button>
+            <button type="button" class="header-button button hide-for-mobile hide-for-tablet">Register Invite</button>
         </nav>
 
         <div class="overlay has-fade"></div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="hero_image">
+            </div>
+            <div class="hero_text">
+                <h2 class="hero_text--title">Next generation digital banking</h2>
+                <p class="hero_text--paragraph">Take your financial life online. Your Easybank account will be a one-stop-shop 
+                    for spending, saving, budgeting, investing, and much more.</p>
+                <a href="#" class="button hero-button">Request Invite</a>
+            </div>
+        </section>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
