--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <a href="#" class="button hero-button">Request Invite</a>
             </div>
         </section>
+        <p>hola</p>
     </main>
     <script src="app.js"></script>
 </body>
