--- a/index.html
+++ b/index.html
@@ -48,7 +48,37 @@
                 <a href="#" class="button hero-button">Request Invite</a>
             </div>
         </section>
-        <p>hola</p>
+        <section class="features">
+            <h2>Why choose Easybank?</h2>
+            <p>We leverage Open Banking to turn your bank account into your financial hub. Control 
+                your finances like never before.</p>
+            <div class="features__grid">
+                <div class="feature_item">
+                    <img src="./assets/images/icon-online.svg" alt="" class="icon-image">
+                    <h3 class="feature_title">Online Banking</h3>
+                    <p class="feature_description">Our modern web and mobile applications allow you to keep track of your finances 
+                        wherever you are in the world.</p>
+                </div>
+                <div class="feature_item">
+                    <img src="./assets/images/icon-budgeting.svg" alt="" class="icon-image">
+                    <h3>Simple Budgeting</h3>
+                    <p>See exactly where your money goes each month. Receive notifications when you’re 
+                        close to hitting your limits.</p>
+                </div>
+                <div class="feature_item">
+                    <img src="./assets/images/icon-onboarding.svg" alt="" class="icon-image">
+                    <h3>Fast Onboarding</h3>
+                    <p>We don’t do branches. Open your account in minutes online and start taking control 
+                        of your finances right away.</p>
+                </div>
+                <div class="feature_item">
+                    <img src="./assets/images/icon-api.svg" alt="" class="icon-image">
+                    <h3> Open API</h3>
+                    <p>Manage your savings, investments, pension, and much more from one account. Tracking 
+                        your money has never been easier.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="app.js"></script>
 </body>
