--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </div>
         </section>
         <section class="features">
-            <h2>Why choose Easybank?</h2>
-            <p>We leverage Open Banking to turn your bank account into your financial hub. Control 
+            <h2 class="features--title">Why choose Easybank?</h2>
+            <p class="features--paragraph">We leverage Open Banking to turn your bank account into your financial hub. Control 
                 your finances like never before.</p>
             <div class="features__grid">
                 <div class="feature_item">
@@ -61,19 +61,19 @@
                 </div>
                 <div class="feature_item">
                     <img src="./assets/images/icon-budgeting.svg" alt="" class="icon-image">
-                    <h3>Simple Budgeting</h3>
+                    <h3 class="feature_title">Simple Budgeting</h3>
                     <p>See exactly where your money goes each month. Receive notifications when you’re 
                         close to hitting your limits.</p>
                 </div>
                 <div class="feature_item">
                     <img src="./assets/images/icon-onboarding.svg" alt="" class="icon-image">
-                    <h3>Fast Onboarding</h3>
+                    <h3 class="feature_title">Fast Onboarding</h3>
                     <p>We don’t do branches. Open your account in minutes online and start taking control 
                         of your finances right away.</p>
                 </div>
                 <div class="feature_item">
                     <img src="./assets/images/icon-api.svg" alt="" class="icon-image">
-                    <h3> Open API</h3>
+                    <h3 class="feature_title"> Open API</h3>
                     <p>Manage your savings, investments, pension, and much more from one account. Tracking 
                         your money has never been easier.</p>
                 </div>
