--- a/index.html
+++ b/index.html
@@ -79,6 +79,47 @@
                 </div>
             </div>
         </section>
+        <section class="articles">
+            <h2 class="articles-section__title">Latest Articles</h2>
+            <div class="grid-articles">
+                <article class="article">
+                    <img src="./assets/images/image-currency.jpg" alt="" class="article__img">
+                    <div class="article__text">
+                        <span class="article__text--autor">By Claire Robinson</span>
+                        <h3 class="article__text--title">Receive money in any currency with no fees</h3>
+                        <p class="article__text-description">The world is getting smaller and we’re becoming more mobile. So why should you be 
+                            forced to only receive money in a single …</p>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="" alt="" class="article__img">
+                    <div class="article__text">
+                        <span class="article__text--autor"> By Wilson Hutton</span>
+                        <h3 class="article__text--title">Take your Easybank card wherever you go</h3>
+                        <p class="article__text--description">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
+                            while you’re abroad. We’ll even show you …</p>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="" alt="" class="article__img">
+                    <div class="article__text">
+                        <span class="article__text--autor">By Claire Robinson</span>
+                        <h3 class="article__text--title">Treat yourself without worrying about money</h3>
+                        <p class="article__text--description">Our simple budgeting feature allows you to separate out your spending and set 
+                            realistic limits each month. That means you …</p>
+                    </div>
+                </article>
+                <article class="article">
+                    <img src="" alt="" class="article__img">
+                    <div class="article__text">
+                        <span class="article__text--autor">By Wilson Hutton</span>
+                        <h3 class="article__text--title">Our invite-only Beta accounts are now live!</h3>
+                        <p class="article__text--description">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
+                            It’s easy to request an invite through the site ...</p>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
     <script src="app.js"></script>
 </body>
